--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-qr-code": "^2.0.3"
+    "react-qr-code": "^2.0.3",
+    "react-svg-to-image": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
