--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.3",
-    "react-svg-to-image": "^3.0.0"
+    "react-svg-to-image": "^3.0.0",
+    "save-svg-as-png": "^1.4.17"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
