--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.3",
+    "react-router-dom": "^6.2.2",
     "react-svg-to-image": "^3.0.0",
     "save-svg-as-png": "^1.4.17"
   },
