--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-svg-to-image": "^3.0.0",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "save-svg-as-png": "^1.4.17"
   },
