--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.3",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-toastify": "^8.2.0",
